--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,7 +4,7 @@
     flex-direction: column-reverse;
 
     box-sizing: content-box;
-    padding: 10px 50px;
+    padding: 10px 10px 10px 50px;
 
     background-color: aliceblue;
 
